--- a/translations/kangyur/translations/072-038_toh338-the_exposition_of_karma.xml
+++ b/translations/kangyur/translations/072-038_toh338-the_exposition_of_karma.xml
@@ -31,7 +31,7 @@
                     &amp; family.</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.8 <date>2024</date>
+                <edition>v 1.1.9 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -219,6 +219,9 @@
                 </change>
                 <change who="#martina-cotter" when="2024-10-22T22:12:30.361Z" type="text-version" status="1.1.8" xml:id="UT22084-072-038-1567">
                     <desc>updates to various bib entries and notes from revisions.</desc>
+                </change>
+                <change who="#konchog" when="2024-11-03T16:02:42.972Z" type="text-version" status="1.1.9" xml:id="UT22084-072-038-1568">
+                    <desc>A few small fixes made to updates in the notes and glossary entries.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -961,12 +964,12 @@
                     <p tid="70">“When killing is done few times and on a small scale, it leads to
                         having a short lifespan.<note place="end" xml:id="UT22084-072-038-102">The Sanskrit editions (Lévi 1932, p. 33; Kudo
                             2004, pp. 40 and 41) contain an additional passage that mentions ten
-                            evil consequences ("disadvantages") of killing living beings (without
+                            evil consequences (“disadvantages”) of killing living beings (without
                             listing them) and refer to the <title xml:lang="Sa-Ltn">
                                 <ref target="http://read.84000.co/translation/toh334.html">Nandikasūtra</ref>
                             </title> for the full list; for the
                             complete passage in a surviving Skt. witness of a version of the
-                            <title xml:lang="Sa-Ltn">Nandikasūtra</title>, the <title xml:lang="Sa-Ltn">Ārya­nandika­pari­pṛcchā­sūtra</title>, see Vinīta 2010, 109–11.
+                            <title xml:lang="Sa-Ltn">Nandikasūtra</title>, the <title xml:lang="Sa-Ltn">Ārya­nandika­pari­pṛcchā­sūtra</title>, see Vinīta 2010, pp. 109–11.
                         </note>
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-072-038-103"/>
@@ -1401,7 +1404,7 @@
                             pp. 241 and 305–6 (<foreign xml:lang="Sa-Ltn" type="term">pustaka</foreign> [“skin”] perhaps meant tree bark). </note> and,
                         as explained in the <title xml:lang="Sa-Ltn">Nandikasūtra</title>,<note place="end" xml:id="UT22084-072-038-161">For identification of the
                                 <title xml:lang="Sa-Ltn">Nandikasūtra</title> (Toh 334), see Kudo
-                            2004, p. 230, n. 3; p. 233, n. 6 and p. 240, n. 13. For an English
+                            2004, p. 230, n. 3; p. 233, n. 6; and p. 240, n. 13. For an English
                             translation of the Tibetan version of the <title xml:lang="Sa-Ltn">Nandikasūtra</title>, see <title xml:lang="en">
                                 <ref target="http://read.84000.co/translation/toh334.html">The Sūtra
                                     of Nandika</ref>
@@ -7595,7 +7598,7 @@
                                     </title> (<title xml:lang="Sa-Ltn">Nandikasūtra</title>, Toh 334). For an
                                     edition and English translation of the extant Skt. witness, see
                                     the <title xml:lang="Sa-Ltn">Ārya­nandika­pari­pṛcchā­sūtra</title>,
-                                    see Vinīta 2010, pp. 97–114.</p>
+                                    in Vinīta 2010, pp. 97–114.</p>
                             </note>
                         </gloss>
                     </item>
