--- a/translations/kangyur/placeholders/041-002_toh57-the_teaching_to_nanda_on_entering_the_womb.xml
+++ b/translations/kangyur/placeholders/041-002_toh57-the_teaching_to_nanda_on_entering_the_womb.xml
@@ -17,12 +17,12 @@
                 <sponsor xml:id="UT22084-041-002-3">Make Wang Xiao Juan</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.18 <date>2024</date>
+                <edition>v 0.0.19 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-041-002"/>
                 <date/>
             </publicationStmt>
@@ -109,6 +109,12 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-10-10T09:32:30.949Z" type="text-version" status="0.0.18" xml:id="UT22084-041-002-34">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-04T14:49:42.04Z" type="translation-status" status="2.a" xml:id="UT22084-041-002-35">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-04T14:49:42.04Z" type="text-version" status="0.0.19" xml:id="UT22084-041-002-36">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
