--- a/translations/kangyur/placeholders/082-004_toh453-the_beginning_chapter_of_the_supremely_great_vajra.xml
+++ b/translations/kangyur/placeholders/082-004_toh453-the_beginning_chapter_of_the_supremely_great_vajra.xml
@@ -17,11 +17,11 @@
                 <author role="translatorEng" xml:id="UT22084-082-004-4">Thomas Doctor</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-082-004"/>
                 <date/>
             </publicationStmt>
@@ -60,6 +60,12 @@
                     <desc>2.h</desc>
                 </change>
                 <change who="#line-tofte" when="2024-09-27T09:06:38.037Z" type="text-version" status="0.0.7" xml:id="UT22084-082-004-12">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-04T15:13:00.664Z" type="translation-status" status="2.g" xml:id="UT22084-082-004-13">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-04T15:13:00.664Z" type="text-version" status="0.0.8" xml:id="UT22084-082-004-14">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
