--- a/translations/kangyur/placeholders/063-004_toh223-the_sutra_of_the_chapter_on_the_thirtythree.xml
+++ b/translations/kangyur/placeholders/063-004_toh223-the_sutra_of_the_chapter_on_the_thirtythree.xml
@@ -18,11 +18,11 @@
                 <sponsor xml:id="UT22084-063-004-6">Zhou Tian Yu, Chen Yi Qin, Zhou Xun, Dou Xuemin, Nada</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.6 <date>2023</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-063-004"/>
                 <date/>
             </publicationStmt>
@@ -59,6 +59,12 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.6" xml:id="UT22084-063-004-13">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-05T10:17:28.049Z" type="translation-status" status="2.g" xml:id="UT22084-063-004-14">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-05T10:17:28.049Z" type="text-version" status="0.0.7" xml:id="UT22084-063-004-15">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
