--- a/translations/kangyur/placeholders/096-072_toh823,1106-auspiciousness_for_the_three_families.xml
+++ b/translations/kangyur/placeholders/096-072_toh823,1106-auspiciousness_for_the_three_families.xml
@@ -10,13 +10,14 @@
                 <title xml:lang="Sa-Ltn" type="otherTitle">Trikulamaṅgala</title>
                 <author role="translatorMain" xml:id="UT22084-096-072-9">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-096-072-10">Bruno Galasek-Hul</author>
+                <editor role="projectEditor" xml:id="UT22084-096-072-19">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-096-072"/>
             </publicationStmt>
             <sourceDesc>
@@ -85,6 +86,15 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-30T12:14:32.132Z" type="text-version" status="0.0.5" xml:id="UT22084-096-072-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-30T12:15:03.623Z" type="text-version" status="0.0.6" xml:id="UT22084-096-072-20">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-05T10:57:27.82Z" type="translation-status" status="2.e" xml:id="UT22084-096-072-21">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-05T10:57:27.82Z" type="text-version" status="0.0.7" xml:id="UT22084-096-072-22">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
