--- a/translations/kangyur/placeholders/072-004_toh304-the_sutra_examining_the_virtuous_and_nonvirtuous_effects_of_the_collection_of_five_downfalls.xml
+++ b/translations/kangyur/placeholders/072-004_toh304-the_sutra_examining_the_virtuous_and_nonvirtuous_effects_of_the_collection_of_five_downfalls.xml
@@ -11,11 +11,11 @@
                 <author role="translatorEng" xml:id="UT22084-072-004-7">Patrick Lambelet</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.4 <date>2023</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status=""/>
                 <idno xml:id="UT22084-072-004"/>
                 <date/>
             </publicationStmt>
@@ -49,6 +49,12 @@
                 </change>
                 <change who="#line-tofte" when="2023-08-09T10:13:42.441Z" type="text-version" status="0.0.4" xml:id="UT22084-072-004-8">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-05T11:03:37.599Z" type="translation-status" status="" xml:id="UT22084-072-004-9">
+                    <desc/>
+                </change>
+                <change who="#line-tofte" when="2024-11-05T11:03:37.599Z" type="text-version" status="0.0.5" xml:id="UT22084-072-004-10">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
