--- a/translations/kangyur/placeholders/034-010_toh22,530-the_perfection_of_wisdom_in_a_few_syllables.xml
+++ b/translations/kangyur/placeholders/034-010_toh22,530-the_perfection_of_wisdom_in_a_few_syllables.xml
@@ -17,11 +17,11 @@
                 <author role="translatorEng" xml:id="UT22084-034-010-7">Patrick Lambelet</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.5 <date>2024</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status=""/>
                 <idno xml:id="UT22084-034-010"/>
                 <date/>
             </publicationStmt>
@@ -67,6 +67,12 @@
                 </change>
                 <change who="#sameer" when="2024-03-31T07:00:35.218Z" type="text-version" status="0.0.5" xml:id="UT22084-034-010-9">
                     <desc>Updated vol. 88 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-05T11:08:01.091Z" type="translation-status" status="" xml:id="UT22084-034-010-10">
+                    <desc/>
+                </change>
+                <change who="#line-tofte" when="2024-11-05T11:08:01.091Z" type="text-version" status="0.0.6" xml:id="UT22084-034-010-11">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
