--- a/translations/kangyur/placeholders/088-018_toh524,977-the_incantation_the_doubtless.xml
+++ b/translations/kangyur/placeholders/088-018_toh524,977-the_incantation_the_doubtless.xml
@@ -14,11 +14,11 @@
                 <author role="translatorEng" xml:id="UT22084-088-018-9">Patrick Lambelet</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status=""/>
                 <idno xml:id="UT22084-088-018"/>
                 <date/>
             </publicationStmt>
@@ -67,6 +67,12 @@
                 </change>
                 <change who="#sameer" when="2024-03-31T06:18:38.484Z" type="text-version" status="0.0.7" xml:id="UT22084-088-018-11">
                     <desc>Updated vol. 88 and 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-05T11:21:54.522Z" type="translation-status" status="" xml:id="UT22084-088-018-12">
+                    <desc/>
+                </change>
+                <change who="#line-tofte" when="2024-11-05T11:21:54.522Z" type="text-version" status="0.0.8" xml:id="UT22084-088-018-13">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
