--- a/translations/kangyur/placeholders/090-046_toh602,921-the_incantation_that_makes_erecting_one_reliquary_like_erecting_ten_million.xml
+++ b/translations/kangyur/placeholders/090-046_toh602,921-the_incantation_that_makes_erecting_one_reliquary_like_erecting_ten_million.xml
@@ -11,11 +11,11 @@
                 <author role="translatorEng" xml:id="UT22084-090-046-7">Patrick Lambelet</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2024</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status=""/>
                 <idno xml:id="UT22084-090-046"/>
                 <date/>
             </publicationStmt>
@@ -61,6 +61,12 @@
                 </change>
                 <change who="#sameer" when="2024-05-01T05:30:48.236Z" type="text-version" status="0.0.5" xml:id="UT22084-090-046-9">
                     <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-05T11:23:12.644Z" type="translation-status" status="" xml:id="UT22084-090-046-10">
+                    <desc/>
+                </change>
+                <change who="#line-tofte" when="2024-11-05T11:23:12.644Z" type="text-version" status="0.0.6" xml:id="UT22084-090-046-11">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
