--- a/translations/kangyur/placeholders/091-048_toh651,1040-the_incantation_for_retaining_what_one_hears.xml
+++ b/translations/kangyur/placeholders/091-048_toh651,1040-the_incantation_for_retaining_what_one_hears.xml
@@ -12,11 +12,11 @@
                 <editor role="reviser" xml:id="UT22084-091-048-7">Patrick Lambelet</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.5 <date>2024</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status=""/>
                 <idno xml:id="UT22084-091-048"/>
                 <date/>
             </publicationStmt>
@@ -62,6 +62,12 @@
                 </change>
                 <change who="#sameer" when="2024-07-05T05:35:43.948Z" type="text-version" status="0.0.5" xml:id="UT22084-091-048-9">
                     <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-05T11:25:32.342Z" type="translation-status" status="" xml:id="UT22084-091-048-10">
+                    <desc/>
+                </change>
+                <change who="#line-tofte" when="2024-11-05T11:25:32.342Z" type="text-version" status="0.0.6" xml:id="UT22084-091-048-11">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
