--- a/translations/kangyur/placeholders/090-019_toh575,917-the_six_syllable_spell.xml
+++ b/translations/kangyur/placeholders/090-019_toh575,917-the_six_syllable_spell.xml
@@ -14,11 +14,11 @@
                 <author role="translatorEng" xml:id="UT22084-090-019-7">Patrick Lambelet</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.5 <date>2024</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-090-019"/>
                 <date/>
             </publicationStmt>
@@ -64,6 +64,12 @@
                 </change>
                 <change who="#sameer" when="2024-05-01T05:26:03.845Z" type="text-version" status="0.0.5" xml:id="UT22084-090-019-9">
                     <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-05T11:36:51.18Z" type="translation-status" status="2.h" xml:id="UT22084-090-019-10">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-05T11:36:51.18Z" type="text-version" status="0.0.6" xml:id="UT22084-090-019-11">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
