--- a/translations/kangyur/placeholders/091-051_toh654,975-the_incantation_of_the_ocean_of_dharma.xml
+++ b/translations/kangyur/placeholders/091-051_toh654,975-the_incantation_of_the_ocean_of_dharma.xml
@@ -13,11 +13,11 @@
                 <author role="translatorEng" xml:id="UT22084-091-051-7">Patrick Lambelet</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.5 <date>2024</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-091-051"/>
                 <date/>
             </publicationStmt>
@@ -63,6 +63,12 @@
                 </change>
                 <change who="#sameer" when="2024-07-02T10:23:40.907Z" type="text-version" status="0.0.5" xml:id="UT22084-091-051-9">
                     <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-05T11:44:59.205Z" type="translation-status" status="2.h" xml:id="UT22084-091-051-10">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-05T11:44:59.205Z" type="text-version" status="0.0.6" xml:id="UT22084-091-051-11">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
