--- a/translations/kangyur/placeholders/076-014_toh359a-the_sutra_of_the_fourty_two_sections.xml
+++ b/translations/kangyur/placeholders/076-014_toh359a-the_sutra_of_the_fourty_two_sections.xml
@@ -16,11 +16,11 @@
                 <author role="translatorEng" xml:id="UT22084-076-014-2">Paul Hackett</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2023</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-076-014"/>
                 <date/>
             </publicationStmt>
@@ -48,6 +48,12 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.3" xml:id="UT22084-076-014-6">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-05T11:54:18.554Z" type="translation-status" status="2.h" xml:id="UT22084-076-014-7">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-05T11:54:18.554Z" type="text-version" status="0.0.4" xml:id="UT22084-076-014-8">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
