--- a/translations/kangyur/translations/001-003_toh1-3-chapter_3_on_lifting_restrictions.xml
+++ b/translations/kangyur/translations/001-003_toh1-3-chapter_3_on_lifting_restrictions.xml
@@ -7,7 +7,7 @@
                 <title type="mainTitle" xml:lang="en">The Chapter on Lifting Restrictions</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Pravāraṇāvastu</title>
                 <title type="mainTitle" xml:lang="bo">དགག་དབྱེའི་གཞི།</title>
-                <title type="mainTitle" xml:lang="Bo-Ltn">dgag dbye'i gzhi</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">dgag dbye’i gzhi</title>
                 <title type="longTitle" xml:lang="en">The Chapter on Lifting Restrictions” from The
                     Chapters on Monastic Discipline</title>
                 <title type="longTitle" xml:lang="Sa-Ltn">Vinayavastu Pravāraṇavastu</title>
@@ -27,7 +27,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-001-003-634">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.9 <date>2024</date>
+                <edition>v 1.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -174,6 +174,9 @@
                 </change>
                 <change who="#celso" when="2024-11-01T19:58:01.406Z" type="text-version" status="1.0.9" xml:id="UT22084-001-003-4663">
                     <desc>rendered italics in verse summary</desc>
+                </change>
+                <change who="#celso" when="2024-11-05T16:12:53.214Z" type="text-version" status="1.0.10" xml:id="UT22084-001-003-4664">
+                    <desc>minor corrections</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -681,7 +684,7 @@
                             commentary comes to an abrupt end in this, the third chapter.</note>
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-001-003-128"/>
-                    <lg tid="46" type="sdom"><!--bsdus_pa'i_sdom-->
+                    <lg tid="46" type="bsdus_pa’i_sdom">
                         <l>
                             <ptr type="subdivision" target="#UT22084-001-003-section-1">Lifting
                                 restrictions</ptr>, <ptr type="subdivision" target="#UT22084-001-003-section-2">improper</ptr>, <ptr type="subdivision" target="#UT22084-001-003-section-3">monk</ptr>,
@@ -1612,12 +1615,11 @@
                     <milestone unit="chunk" xml:id="UT22084-001-003-272"/>
                     <p tid="142">For what reason is the lifting of restrictions recited once?</p>
                     <milestone unit="chunk" xml:id="UT22084-001-003-274"/>
-                    <p tid="143">An intervening summary:<note place="end" xml:id="UT22084-001-003-273">The section 'Monk' includes first, an
-                            'intervening summary' (Tib. <foreign xml:lang="Bo-Ltn">bar
+                    <p tid="143">An intervening summary:<note place="end" xml:id="UT22084-001-003-273">The section ‘Monk’ includes first, an
+                        ‘intervening summary’ (Tib. <foreign xml:lang="Bo-Ltn">bar
                                 sdom</foreign>; <foreign xml:lang="Sa-Ltn">antaroddāna</foreign>)
-                            and later a 'summary' (Tib. <foreign xml:lang="Bo-Ltn">sdom</foreign>;
-                            Skt. <foreign xml:lang="Sa-Ltn">uddāna</foreign>) at <ptr target="#UT22084-001-003-359"/>–<ptr target="#UT22084-001-003-360"/>
-                        </note>
+                        and later a ‘summary’ (Tib. <foreign xml:lang="Bo-Ltn">sdom</foreign>;
+                            Skt. <foreign xml:lang="Sa-Ltn">uddāna</foreign>) at <ptr target="#UT22084-001-003-359"/>–<ptr target="#UT22084-001-003-360"/>.</note>
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-001-003-275"/>
                     <lg tid="144" type="bar_sdom">
@@ -1797,26 +1799,14 @@
                                 seven means for “quelling” or “settling” a dispute as (1) quell in
                                 person (Tib. <foreign xml:lang="Bo-Ltn" type="term">mngon sum zhi
                                     ba</foreign>; Skt. <foreign xml:lang="Sa-Ltn" type="term">saṃmukhaṃ śamatha</foreign>); (2) through recourse to memory
-                                (Tib. <foreign xml:lang="Bo-Ltn" type="term">dran </foreign>
-                                <foreign xml:lang="Bo-Ltn" type="quote">’</foreign>
-                                <foreign xml:lang="Bo-Ltn" type="term">dul </foreign>
-                                <foreign xml:lang="Bo-Ltn" type="quote">’</foreign>
-                                <foreign xml:lang="Bo-Ltn" type="term">os;</foreign> Skt. <foreign xml:lang="Sa-Ltn" type="term">smṛtyāvinaya</foreign>); (3)
-                                dismissing by reason of insanity (Tib. <foreign xml:lang="Bo-Ltn" type="term">ma myos </foreign>
-                                <foreign xml:lang="Bo-Ltn" type="quote">’</foreign>
-                                <foreign xml:lang="Bo-Ltn" type="term">dul </foreign>
-                                <foreign xml:lang="Bo-Ltn" type="quote">’</foreign>
-                                <foreign xml:lang="Bo-Ltn" type="term">os</foreign>;
+                                (Tib. <foreign xml:lang="Bo-Ltn" type="quote">dran ’dul ’os</foreign>; Skt. <foreign xml:lang="Sa-Ltn" type="term">smṛtyāvinaya</foreign>); (3)
+                                dismissing by reason of insanity (Tib. <foreign xml:lang="Bo-Ltn" type="quote">ma myos ’dul ’os</foreign>;
                                 Skt. <foreign xml:lang="Sa-Ltn" type="term">amūḍhavinaya</foreign>);
                                 (4) by votes (<foreign xml:lang="Bo-Ltn" type="term">tshul shing dag
                                     ni blang ba</foreign>; Skt. <foreign xml:lang="Sa-Ltn" type="term">chalākāgrahaṇa</foreign>); (5) carrying out an
                                 investigation into the nature of an issue (Tib. <foreign xml:lang="Bo-Ltn" type="term">de yi ngo bo tshol
                                 gzhug</foreign>; Skt. <foreign xml:lang="Sa-Ltn" type="term">tatsvabhāvaiṣīya</foreign>); (6) by sweeping it under the rug
-                                or, more literally, spreading over with grass (Tib. <foreign xml:lang="Bo-Ltn" type="term">rtswa bkram lta bur
-                                    </foreign>
-                                <foreign xml:lang="Bo-Ltn" type="quote">’</foreign>
-                                <foreign xml:lang="Bo-Ltn" type="term">os
-                                    pa</foreign>; Skt. <foreign xml:lang="Sa-Ltn" type="term">tṛṇaprastāraka</foreign>); and (7) by taking an oath (Tib.
+                                or, more literally, spreading over with grass (Tib. <foreign type="quote" xml:lang="Bo-Ltn">rtswa bkram lta bur ’os pa</foreign>; Skt. <foreign xml:lang="Sa-Ltn" type="term">tṛṇaprastāraka</foreign>); and (7) by taking an oath (Tib.
                                     <foreign xml:lang="Bo-Ltn" type="term">khas blang bar ‘os
                                     pa</foreign>; Skt. <foreign xml:lang="Sa-Ltn" type="term">pratijñākāraka</foreign>). See Borgland 2014.</note>
                             <ref cRef="F.229.a" type="folio" xml:id="UT22084-001-003-573"/>
@@ -2121,7 +2111,7 @@
                             puts forward a matter but not a person?”<note place="end" xml:id="UT22084-001-003-349"> “Matter” refers to the incident a monk
                                 may be accused of. Sometimes an accusation is made against a monk
                                 but the prompter might not identify the monk, in which case the
-                                matter is known but the person is not. See <ptr target="#UT22084-001-003-433"/>–<ptr target="#UT22084-001-003-438"/><!--F.237.a.2–237.b.2-->
+                                matter is known but the person is not. See <ptr target="#UT22084-001-003-433"/>–<ptr target="#UT22084-001-003-438"/>.<!--F.237.a.2–237.b.2-->
                             </note>
                         </p>
                         <p tid="203">“Upāli, it should not be extended. Say the following to him:
@@ -2488,8 +2478,7 @@
                                     on the Restoration Rite</title>, see the “Several Repetitions” summary
                             verse (Tib. <foreign xml:lang="Bo-Ltn" type="term">sdom gyi tshig su
                                 bcad pa</foreign>; Skt. <foreign xml:lang="Sa-Ltn" type="term">uddānagāthā</foreign>) and 
-                                related contents at <ptr target="#UT22084-001-002-743"/>–<ptr target="#UT22084-001-002-1000"/>
-                            <!--F.158.b–F.176.b-->.</note> yet with one difference: where <title xml:lang="en">The Chapter on the Restoration Rite</title> reads “four or
+                                related contents at <ptr target="#UT22084-001-002-743"/>–<ptr target="#UT22084-001-002-1000"/><!--F.158.b–F.176.b-->.</note> yet with one difference: where <title xml:lang="en">The Chapter on the Restoration Rite</title> reads “four or
                         more resident monks may be seated and in a quorum,” and so forth, here one
                         should read “five or more.” </p>
                 </tei:div>
@@ -2944,7 +2933,7 @@
                             <term type="translationMain">Blessed One</term>
                             <term type="translationAlternative">Blessed</term>
                             <term xml:lang="Sa-Ltn" status="verified" type="attestedSource">bhagavān</term>
-                            <term xml:lang="Bo-Ltn" status="verified" type="attestedSource" n="1">bcom ldan 'das</term>
+                            <term xml:lang="Bo-Ltn" status="verified" type="attestedSource" n="1">bcom ldan ’das</term>
                             <term xml:lang="bo" type="attestedSource" n="1">བཅོམ་ལྡན་འདས།</term>
                         </gloss>
                     </item>
@@ -3141,23 +3130,13 @@
                                     This describes the state of a monastic who has made amends for
                                     their offenses. See Kalyāṇamitra (F.313.b–314.a)<ref rend="pending" target="https://read.84000.co/translation/toh4113"/>:
                                         <foreign xml:lang="Bo-Ltn" type="quote">dge slong rnams bde
-                                        ba la reg par gnas pa zhes bya ba ni las </foreign>
-                                    <foreign xml:lang="Bo-Ltn" type="term">’</foreign>
-                                    <foreign xml:lang="Bo-Ltn" type="quote">grub pa dang/ kha na ma tho
-                                        ba med par </foreign>
-                                    <foreign xml:lang="Bo-Ltn" type="term">’</foreign>
-                                    <foreign xml:lang="Bo-Ltn" type="quote">gyur
+                                        ba la reg par gnas pa zhes bya ba ni las ’grub pa dang/ kha na ma tho
+                                        ba med par ’gyur
                                         ba‘i phyir ro</foreign>, and F.318.a<ref rend="pending" target="https://read.84000.co/translation/toh4113"/>:
-                                        <foreign xml:lang="Bo-Ltn" type="quote">bde ba la reg pa
+                                        <foreign type="quote" xml:lang="Bo-Ltn">bde ba la reg pa
                                         zhes bya ba ni rnam par dag pa thob pa ste/ ltung ba dang
-                                        bral ba</foreign>
-                                    <foreign xml:lang="Bo-Ltn" type="term">’</foreign>
-                                    <foreign xml:lang="Bo-Ltn" type="quote">i rgyus
-                                        yid yongs su dga</foreign>
-                                    <foreign xml:lang="Bo-Ltn" type="term">’</foreign>
-                                    <foreign xml:lang="Bo-Ltn" type="quote"> ba</foreign>
-                                    <foreign xml:lang="Bo-Ltn" type="term">’</foreign>
-                                    <foreign xml:lang="Bo-Ltn" type="quote"> o</foreign>.</p>
+                                        bral ba’i rgyus
+                                        yid yongs su dga’ ba’ o</foreign>.</p>
                             </note>
                         </gloss>
                     </item>
@@ -3921,7 +3900,7 @@
                             <note type="definition">
                                 <p>In <title xml:lang="en">The Chapter on Lifting
                                         Restrictions</title>, a distinction is drawn between
-                                    “boarding and resident monks” (Tib. <foreign xml:lang="Bo-Ltn">gnas pa dang gnyug mar gnas pa'i dge slong
+                                    “boarding and resident monks” (Tib. <foreign xml:lang="Bo-Ltn">gnas pa dang gnyug mar gnas pa’i dge slong
                                     rnams</foreign>). The former, also rendered as “visiting” monks, are short-term occupants who are
                                     not familiar with the inner or outer workings of the community.
                                     The latter, “resident monks,” are long-term occupants who are
@@ -4091,7 +4070,7 @@
                             <term type="translationAlternative">welcome with friendly words</term>
                             <term type="translationAlternative">welcomed</term>
                             <term xml:lang="Sa-Ltn" type="attestedSource" status="verified">sākhilyakena pratyudgamya</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">bshes pa'i tshig gis bsu bya</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">bshes pa’i tshig gis bsu bya</term>
                             <term xml:lang="bo" type="attestedSource" n="1">བཤེས་པའི་ཚིག་གིས་བསུ་བྱ།</term>
                         </gloss>
                     </item>-->
@@ -4143,11 +4122,7 @@
                                         <foreign xml:lang="zh" type="term">波逸底迦</foreign>) includes
                                     “transgressions requiring forfeiture” (Tib. <foreign xml:lang="Bo-Ltn" type="term">spong ba’i ltung
                                         byed</foreign>; Skt. <foreign xml:lang="Sa-Ltn" type="term">naihsargikā-pāyantika</foreign>) and “simple atonements”
-                                    (Tib. <foreign xml:lang="Bo-Ltn" type="term">ltung byed
-                                        </foreign>
-                                    <foreign xml:lang="Bo-Ltn" type="quote">’</foreign>
-                                    <foreign xml:lang="Bo-Ltn" type="term">ba’ zhig
-                                        pa</foreign>; Skt. <foreign xml:lang="Sa-Ltn" type="term">śuddha-prayāścittaka</foreign>).</p>
+                                    (Tib. <foreign xml:lang="Bo-Ltn" type="quote">ltung byed ’ba’ zhig pa</foreign>; Skt. <foreign xml:lang="Sa-Ltn" type="term">śuddha-prayāścittaka</foreign>).</p>
                             </note>
                         </gloss>
                     </item>
