--- a/translations/kangyur/placeholders/091-059_toh662,1007-the_incantation_of_vasudhara.xml
+++ b/translations/kangyur/placeholders/091-059_toh662,1007-the_incantation_of_vasudhara.xml
@@ -15,11 +15,11 @@
                 <author role="translatorEng" xml:id="UT22084-091-059-4">Péter-Dániel Szántó</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-091-059"/>
                 <date/>
             </publicationStmt>
@@ -68,6 +68,12 @@
                 </change>
                 <change who="#sameer" when="2024-07-02T13:57:53.248Z" type="text-version" status="0.0.6" xml:id="UT22084-091-059-12">
                     <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-06T14:16:44.462Z" type="translation-status" status="2.h" xml:id="UT22084-091-059-13">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-06T14:16:44.462Z" type="text-version" status="0.0.7" xml:id="UT22084-091-059-14">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
