--- a/translations/kangyur/translations/088-010_toh516,886-the_dharani_heap_of_flowers.xml
+++ b/translations/kangyur/translations/088-010_toh516,886-the_dharani_heap_of_flowers.xml
@@ -25,7 +25,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-088-010-168">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.0 <date>2024</date>
+                <edition>v 1.0.1 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -169,6 +169,9 @@
                 </change>
                 <change who="#john" when="2024-11-06T13:31:38.9Z" type="text-version" status="1.0.0" xml:id="UT22084-088-010-895">
                     <desc>Completed final review and a number of further edits.</desc>
+                </change>
+                <change who="#martina-cotter" when="2024-11-06T15:30:29.253Z" type="text-version" status="1.0.1" xml:id="UT22084-088-010-896">
+                    <desc>minor updates.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -389,7 +392,7 @@
                             passage is quoted with reference in
                             Nāgārjuna’s <title xml:lang="Sa-Ltn">Sūtrasamuccaya</title> (Sanskrit not
                             available; Toh 3934, 181.b–182.a) and Prajñākaramati’s <title xml:lang="Sa-Ltn">Bodhi­caryāvatāra­pañjikā</title> (La Vallée Poussin 1901–14, p. 424):
-                                <foreign xml:lang="Sa-Ltn" type="quote">ye kecit siṃhavikrīḍita tathāgatasya
+                            <foreign xml:lang="Sa-Ltn" type="quote">ye kecit <term rend="ignore">siṃhavikrīḍita</term> tathāgatasya
                                 pūjāṃ kariṣyanti tiṣṭhato vā pari­nirvṛtasya vā, sarve te triyānād ekatareṇa
                                 yānena pari­nirvāsyanti | yaś ca khalu siṃha­vikrīḍita tathāgatam arhantaṃ
                                 samyaksaṃ­buddhaṃ dṛṣṭvā cittaṃ prasādayet, prasannacittaḥ satkuryāt,
@@ -490,7 +493,7 @@
                             have adopted the reading of the Stok Palace Kangyur, <foreign xml:lang="Bo-Ltn" type="quote">de’i sems la
                                 gnas par ’gyur te</foreign>, instead of the Degé reading, <foreign xml:lang="Bo-Ltn" type="quote">de’i sems las rnam par dag par ’gyur
                                 te</foreign>. This somewhat obscure sentence shows great fluctuation in the
-                            Chinese translations as well. </note> except for the four noble truths. Why is
+                            Chinese translations as well. </note> except for the four truths of the noble ones. Why is
                         that? Because those dharmas pertain to the uncontaminated.” <ref cRef="F.33.b" key="toh516" work="W22084"/>
                         <ref cRef="F.50.b" key="toh516" type="folio" xml:id="UT22084-088-010-145"/>
                     </p>
@@ -785,10 +788,6 @@
                             <term status="verified" xml:lang="Bo-Ltn" n="1">ma dros pa </term>
                             <term xml:lang="bo" n="1">མ་དྲོས་པ།</term>
                             <term status="verified" xml:lang="Sa-Ltn" type="attestedDictionary">anavatapta</term>
-                            <note type="definition">
-                                <p>Name of a nāga king ruling over the environs of Lake
-                                    Anavatapta. </p>
-                            </note>
                         </gloss>
                     </item>
                     <item>
