--- a/translations/kangyur/placeholders/093-020_toh705,900-the_hundred_and_eight_names_of_avalokitesvara.xml
+++ b/translations/kangyur/placeholders/093-020_toh705,900-the_hundred_and_eight_names_of_avalokitesvara.xml
@@ -16,11 +16,11 @@
                 <editor role="projectEditor" xml:id="UT22084-093-020-37">Nathaniel Rich</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.16 <date>2024</date>
+                <edition>v 0.0.17 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-093-020"/>
                 <date/>
             </publicationStmt>
@@ -122,6 +122,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-10-31T15:54:29.406Z" type="text-version" status="0.0.16" xml:id="UT22084-093-020-40">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-08T08:45:24.3Z" type="translation-status" status="2.a" xml:id="UT22084-093-020-41">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-08T08:45:24.3Z" type="text-version" status="0.0.17" xml:id="UT22084-093-020-42">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
