--- a/translations/kangyur/placeholders/081-009_toh440-the_tantra_of_mahakala.xml
+++ b/translations/kangyur/placeholders/081-009_toh440-the_tantra_of_mahakala.xml
@@ -10,18 +10,19 @@
                 <title type="otherTitle" xml:lang="Sa-Ltn">Mahākālatantrarājanāma</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">nag po chen po zhes bya ba'i rgyud kyi rgyal po/</title>
                 <title type="otherTitle" xml:lang="zh">《大黑天續》</title>
-                <author role="translatorMain" xml:id="UT22084-081-009-1"/>
-                <author role="translatorEng" xml:id="UT22084-081-009-2">Adam Krug</author>
+                <author role="translatorMain" xml:id="UT22084-081-009-1">84000 Associate Translators</author>
+                <author role="translatorEng" xml:id="UT22084-081-009-2">Adam C. Krug</author>
                 <editor role="projectEditor" xml:id="UT22084-081-009-3">Ryan Damron</editor>
+                <editor role="copyEditor" xml:id="UT22084-081-009-26">Laura Goetz</editor>
                 <sponsor xml:id="UT22084-081-009-4">Lina Herlintje</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.11 <date>2024</date>
+                <edition>v 0.1.13 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-081-009"/>
                 <date/>
             </publicationStmt>
@@ -90,6 +91,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-10-09T11:57:58.27Z" type="text-version" status="0.1.11" xml:id="UT22084-081-009-22">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-10-09T11:59:56.179Z" type="text-version" status="0.1.12" xml:id="UT22084-081-009-27">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-11T10:36:56.774Z" type="translation-status" status="2.d" xml:id="UT22084-081-009-28">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-11T10:36:56.774Z" type="text-version" status="0.1.13" xml:id="UT22084-081-009-29">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
