--- a/translations/kangyur/placeholders/043-001_toh64-the_sutra_of_vidyutpraptas_questions.xml
+++ b/translations/kangyur/placeholders/043-001_toh64-the_sutra_of_vidyutpraptas_questions.xml
@@ -17,11 +17,11 @@
                 <sponsor xml:id="UT22084-043-001-12">Anonymous</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.14 <date>2024</date>
+                <edition>v 0.0.15 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-043-001"/>
                 <date/>
             </publicationStmt>
@@ -96,6 +96,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-01T15:55:06.574Z" type="text-version" status="0.0.14" xml:id="UT22084-043-001-30">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-11T14:15:51.395Z" type="translation-status" status="2.c" xml:id="UT22084-043-001-31">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-11-11T14:15:51.395Z" type="text-version" status="0.0.15" xml:id="UT22084-043-001-32">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
